--- a/style.css
+++ b/style.css
@@ -262,3 +262,68 @@
 .about-us-icons i{
     font-size: 32px;
 }
+
+/* Social Styles */
+
+.social .social-container{
+    width: 1320px;
+    height: 420px;
+    /* border: 5px solid green; */
+    margin: 30px auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+}
+
+.social-container h1{
+    width: 700px;
+    text-align: center;
+    color: rgb(16, 16, 16);
+    font-family: Work Sans;
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 60px;
+    /* border: 3px solid red; */
+}
+.social-container p{
+    text-align: center;
+    color: rgb(16, 16, 16, 0.6);
+    font-family: Work Sans;
+    font-size: 22px;
+    font-weight: 500;
+    margin-top: 20px;
+}
+.social-container hr{
+    width: 1000px;
+    color: rgb(16, 16, 16, 0.7);
+    margin-top: 30px;
+}
+.social-container span{
+    color: rgb(16, 16, 16, 0.7);
+    font-family: Work Sans;
+    font-size: 28px;
+    font-weight: 600;
+    margin-top: 20px;
+    margin-bottom: -10px;
+    /* border: 3px solid black; */
+}
+.social-container img{
+    opacity: 0.1;
+    width: 100%;
+    height: 100%;
+    border-radius: 8px;
+    position: absolute;
+    top: 0px;
+}
+.social-container .social-icons{
+    width: 200px;
+    height: 40px;
+    /* border: 3px solid green; */
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+}
+.social-container .social-icons i{
+    font-size: 32px;
+}
