--- a/style.css
+++ b/style.css
@@ -266,10 +266,10 @@
 /* Social Styles */
 
 .social .social-container{
-    width: 1320px;
-    height: 420px;
+    width: 1900px;
+    height: 500px;
     /* border: 5px solid green; */
-    margin: 30px auto;
+    margin: 40px auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -315,6 +315,7 @@
     border-radius: 8px;
     position: absolute;
     top: 0px;
+    background-size: cover;
 }
 .social-container .social-icons{
     width: 200px;
